[gd_scene load_steps=16 format=3 uid="uid://cma35ifep5pci"]

[ext_resource type="Script" path="res://scene/entry_scene.gd" id="1_nvjp0"]
[ext_resource type="FontFile" uid="uid://cdmwpqqodfjrf" path="res://fonts/PixeloidSans.ttf" id="1_wun42"]
[ext_resource type="Texture2D" uid="uid://v7ccculbcgxw" path="res://images/screens/background.png" id="2_6t7ae"]
[ext_resource type="Texture2D" uid="uid://djtjvtpp8aan0" path="res://images/icons/TREE.png" id="3_ptjb2"]
[ext_resource type="PackedScene" uid="uid://6n8jwc5ui77u" path="res://player/influencer_player.tscn" id="3_s7a0h"]
[ext_resource type="Texture2D" uid="uid://bb2anutudw0ih" path="res://images/icons/detailsSpriteSheet.png" id="4_mix3n"]
[ext_resource type="Texture2D" uid="uid://b5cebmy3kyqmv" path="res://images/icons/wanderlust.png" id="4_qicc1"]
[ext_resource type="StyleBox" uid="uid://dekb4s55by2dn" path="res://styles/panellabel.tres" id="5_87hgm"]
[ext_resource type="StyleBox" uid="uid://ot2or1x7kljp" path="res://styles/button.tres" id="7_cl7we"]
[ext_resource type="StyleBox" uid="uid://bg1q1f0dxs6es" path="res://styles/hoverClick.tres" id="8_ypdrj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_56irh"]
texture = ExtResource("2_6t7ae")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
10:38/0 = 0
11:38/0 = 0
12:38/0 = 0
13:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
10:39/0 = 0
11:39/0 = 0
12:39/0 = 0
13:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
10:40/0 = 0
11:40/0 = 0
12:40/0 = 0
13:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
10:41/0 = 0
11:41/0 = 0
12:41/0 = 0
13:41/0 = 0
0:42/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
12:42/0 = 0
13:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
8:44/0 = 0
9:44/0 = 0
10:44/0 = 0
11:44/0 = 0
12:44/0 = 0
13:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
8:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
12:45/0 = 0
13:45/0 = 0
0:46/0 = 0
1:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
5:46/0 = 0
6:46/0 = 0
7:46/0 = 0
8:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
12:46/0 = 0
13:46/0 = 0
0:47/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
8:47/0 = 0
9:47/0 = 0
10:47/0 = 0
11:47/0 = 0
12:47/0 = 0
13:47/0 = 0
0:48/0 = 0
1:48/0 = 0
2:48/0 = 0
3:48/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
7:48/0 = 0
8:48/0 = 0
9:48/0 = 0
10:48/0 = 0
11:48/0 = 0
12:48/0 = 0
13:48/0 = 0
0:49/0 = 0
1:49/0 = 0
2:49/0 = 0
3:49/0 = 0
4:49/0 = 0
5:49/0 = 0
6:49/0 = 0
7:49/0 = 0
8:49/0 = 0
9:49/0 = 0
10:49/0 = 0
11:49/0 = 0
12:49/0 = 0
13:49/0 = 0
0:50/0 = 0
1:50/0 = 0
2:50/0 = 0
3:50/0 = 0
4:50/0 = 0
5:50/0 = 0
6:50/0 = 0
7:50/0 = 0
8:50/0 = 0
9:50/0 = 0
10:50/0 = 0
11:50/0 = 0
12:50/0 = 0
13:50/0 = 0
0:51/0 = 0
1:51/0 = 0
2:51/0 = 0
3:51/0 = 0
4:51/0 = 0
5:51/0 = 0
6:51/0 = 0
7:51/0 = 0
8:51/0 = 0
9:51/0 = 0
10:51/0 = 0
11:51/0 = 0
12:51/0 = 0
13:51/0 = 0
0:52/0 = 0
1:52/0 = 0
2:52/0 = 0
3:52/0 = 0
4:52/0 = 0
5:52/0 = 0
6:52/0 = 0
7:52/0 = 0
8:52/0 = 0
9:52/0 = 0
10:52/0 = 0
11:52/0 = 0
12:52/0 = 0
13:52/0 = 0
0:53/0 = 0
1:53/0 = 0
2:53/0 = 0
3:53/0 = 0
4:53/0 = 0
5:53/0 = 0
6:53/0 = 0
7:53/0 = 0
8:53/0 = 0
9:53/0 = 0
10:53/0 = 0
11:53/0 = 0
12:53/0 = 0
13:53/0 = 0
0:54/0 = 0
1:54/0 = 0
2:54/0 = 0
3:54/0 = 0
4:54/0 = 0
5:54/0 = 0
6:54/0 = 0
7:54/0 = 0
8:54/0 = 0
9:54/0 = 0
10:54/0 = 0
11:54/0 = 0
12:54/0 = 0
13:54/0 = 0
0:55/0 = 0
1:55/0 = 0
2:55/0 = 0
3:55/0 = 0
4:55/0 = 0
5:55/0 = 0
6:55/0 = 0
7:55/0 = 0
8:55/0 = 0
9:55/0 = 0
10:55/0 = 0
11:55/0 = 0
12:55/0 = 0
13:55/0 = 0
0:56/0 = 0
1:56/0 = 0
2:56/0 = 0
3:56/0 = 0
4:56/0 = 0
5:56/0 = 0
6:56/0 = 0
7:56/0 = 0
8:56/0 = 0
9:56/0 = 0
10:56/0 = 0
11:56/0 = 0
12:56/0 = 0
13:56/0 = 0
0:57/0 = 0
1:57/0 = 0
2:57/0 = 0
3:57/0 = 0
4:57/0 = 0
5:57/0 = 0
6:57/0 = 0
7:57/0 = 0
8:57/0 = 0
9:57/0 = 0
10:57/0 = 0
11:57/0 = 0
12:57/0 = 0
13:57/0 = 0
0:58/0 = 0
1:58/0 = 0
2:58/0 = 0
3:58/0 = 0
4:58/0 = 0
5:58/0 = 0
6:58/0 = 0
7:58/0 = 0
8:58/0 = 0
9:58/0 = 0
10:58/0 = 0
11:58/0 = 0
12:58/0 = 0
13:58/0 = 0
0:59/0 = 0
1:59/0 = 0
2:59/0 = 0
3:59/0 = 0
4:59/0 = 0
5:59/0 = 0
6:59/0 = 0
7:59/0 = 0
8:59/0 = 0
9:59/0 = 0
10:59/0 = 0
11:59/0 = 0
12:59/0 = 0
13:59/0 = 0
0:60/0 = 0
1:60/0 = 0
2:60/0 = 0
3:60/0 = 0
4:60/0 = 0
5:60/0 = 0
6:60/0 = 0
7:60/0 = 0
8:60/0 = 0
9:60/0 = 0
10:60/0 = 0
11:60/0 = 0
12:60/0 = 0
13:60/0 = 0
0:61/0 = 0
1:61/0 = 0
2:61/0 = 0
3:61/0 = 0
4:61/0 = 0
5:61/0 = 0
6:61/0 = 0
7:61/0 = 0
8:61/0 = 0
9:61/0 = 0
10:61/0 = 0
11:61/0 = 0
12:61/0 = 0
13:61/0 = 0
0:62/0 = 0
1:62/0 = 0
2:62/0 = 0
3:62/0 = 0
4:62/0 = 0
5:62/0 = 0
6:62/0 = 0
7:62/0 = 0
8:62/0 = 0
9:62/0 = 0
10:62/0 = 0
11:62/0 = 0
12:62/0 = 0
13:62/0 = 0
0:63/0 = 0
1:63/0 = 0
2:63/0 = 0
3:63/0 = 0
4:63/0 = 0
5:63/0 = 0
6:63/0 = 0
7:63/0 = 0
8:63/0 = 0
9:63/0 = 0
10:63/0 = 0
11:63/0 = 0
12:63/0 = 0
13:63/0 = 0
0:64/0 = 0
1:64/0 = 0
2:64/0 = 0
3:64/0 = 0
4:64/0 = 0
5:64/0 = 0
6:64/0 = 0
7:64/0 = 0
8:64/0 = 0
9:64/0 = 0
10:64/0 = 0
11:64/0 = 0
12:64/0 = 0
13:64/0 = 0
0:65/0 = 0
1:65/0 = 0
2:65/0 = 0
3:65/0 = 0
4:65/0 = 0
5:65/0 = 0
6:65/0 = 0
7:65/0 = 0
8:65/0 = 0
9:65/0 = 0
10:65/0 = 0
11:65/0 = 0
12:65/0 = 0
13:65/0 = 0
0:66/0 = 0
1:66/0 = 0
2:66/0 = 0
3:66/0 = 0
4:66/0 = 0
5:66/0 = 0
6:66/0 = 0
7:66/0 = 0
8:66/0 = 0
9:66/0 = 0
10:66/0 = 0
11:66/0 = 0
12:66/0 = 0
13:66/0 = 0
0:67/0 = 0
1:67/0 = 0
2:67/0 = 0
3:67/0 = 0
4:67/0 = 0
5:67/0 = 0
6:67/0 = 0
7:67/0 = 0
8:67/0 = 0
9:67/0 = 0
10:67/0 = 0
11:67/0 = 0
12:67/0 = 0
13:67/0 = 0
0:68/0 = 0
1:68/0 = 0
2:68/0 = 0
3:68/0 = 0
4:68/0 = 0
5:68/0 = 0
6:68/0 = 0
7:68/0 = 0
8:68/0 = 0
9:68/0 = 0
10:68/0 = 0
11:68/0 = 0
12:68/0 = 0
13:68/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h44ns"]
texture = ExtResource("3_ptjb2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b1u6v"]
texture = ExtResource("4_mix3n")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
1:3/0 = 0
1:4/0 = 0
1:5/0 = 0

[sub_resource type="TileSet" id="TileSet_tumpg"]
sources/0 = SubResource("TileSetAtlasSource_56irh")
sources/1 = SubResource("TileSetAtlasSource_h44ns")
sources/2 = SubResource("TileSetAtlasSource_b1u6v")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03qbg"]

[node name="entryScene" type="Node2D"]
script = ExtResource("1_nvjp0")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_tumpg")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(0, 589824, 56, 65536, 589824, 56, 131072, 589824, 56, 196608, 589824, 56, 262144, 589824, 56, 327680, 589824, 56, 393216, 589824, 56, 458752, 589824, 56, 524288, 589824, 56, 589824, 589824, 56, 1, 589824, 56, 65537, 589824, 56, 131073, 589824, 56, 196609, 589824, 56, 262145, 589824, 56, 327681, 589824, 56, 393217, 589824, 56, 458753, 589824, 56, 524289, 589824, 56, 589825, 589824, 56, 2, 589824, 56, 65538, 589824, 56, 131074, 589824, 56, 196610, 589824, 56, 262146, 589824, 56, 327682, 589824, 56, 393218, 589824, 56, 458754, 589824, 56, 524290, 589824, 56, 589826, 589824, 56, 3, 589824, 56, 65539, 589824, 56, 131075, 589824, 56, 196611, 589824, 56, 262147, 589824, 56, 327683, 589824, 56, 393219, 589824, 56, 458755, 589824, 56, 524291, 589824, 56, 589827, 589824, 56, 4, 589824, 56, 65540, 589824, 56, 131076, 589824, 56, 196612, 589824, 56, 262148, 589824, 56, 327684, 589824, 56, 393220, 589824, 56, 458756, 589824, 56, 524292, 589824, 56, 589828, 589824, 56, 5, 589824, 56, 65541, 589824, 56, 131077, 589824, 56, 196613, 589824, 56, 262149, 589824, 56, 327685, 589824, 56, 393221, 589824, 56, 458757, 589824, 56, 524293, 589824, 56, 589829, 589824, 56, 6, 589824, 56, 65542, 589824, 56, 131078, 589824, 56, 196614, 589824, 56, 262150, 589824, 56, 327686, 589824, 56, 393222, 589824, 56, 458758, 589824, 56, 524294, 589824, 56, 589830, 589824, 56, 7, 589824, 56, 65543, 589824, 56, 131079, 589824, 56, 196615, 589824, 56, 262151, 589824, 56, 327687, 589824, 56, 393223, 589824, 56, 458759, 589824, 56, 524295, 589824, 56, 589831, 589824, 56, 8, 589824, 56, 65544, 589824, 56, 131080, 589824, 56, 196616, 589824, 56, 262152, 589824, 56, 327688, 589824, 56, 393224, 589824, 56, 458760, 589824, 56, 524296, 589824, 56, 589832, 589824, 56, 9, 589824, 56, 65545, 589824, 56, 131081, 589824, 56, 196617, 589824, 56, 262153, 589824, 56, 327689, 589824, 56, 393225, 589824, 56, 458761, 589824, 56, 524297, 589824, 56, 589833, 589824, 56, 10, 589824, 56, 65546, 589824, 56, 131082, 589824, 56, 196618, 589824, 56, 262154, 589824, 56, 327690, 589824, 56, 393226, 589824, 56, 458762, 589824, 56, 524298, 589824, 56, 589834, 589824, 56, 11, 589824, 56, 65547, 589824, 56, 131083, 589824, 56, 196619, 589824, 56, 262155, 589824, 56, 327691, 589824, 56, 393227, 589824, 56, 458763, 589824, 56, 524299, 589824, 56, 589835, 589824, 56, 12, 589824, 56, 65548, 589824, 56, 131084, 589824, 56, 196620, 589824, 56, 262156, 589824, 56, 327692, 589824, 56, 393228, 589824, 56, 458764, 589824, 56, 524300, 589824, 56, 589836, 589824, 56, 13, 589824, 56, 65549, 589824, 56, 131085, 589824, 56, 196621, 589824, 56, 262157, 589824, 56, 327693, 589824, 56, 393229, 589824, 56, 458765, 589824, 56, 524301, 589824, 56, 589837, 589824, 56)
layer_1/name = "details"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(0, 65538, 1, 1, 65538, 1, 65536, 65538, 1, 131072, 65538, 1, 65537, 65538, 1, 131073, 65538, 1, 196609, 65538, 1, 65538, 65538, 1, 3, 65538, 1, 11, 65538, 1, 12, 65538, 1, 65548, 65538, 1, 131084, 65538, 1, 13, 65538, 1, 65549, 65538, 1, 131085, 65538, 1, 65546, 65538, 1, 9, 65538, 1, 196619, 327682, 1, 4, 327682, 1, 196608, 327682, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_top = 79.0
offset_right = 224.0
offset_bottom = 160.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("5_87hgm")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.976471, 0.976471, 0.976471, 1)
theme_override_fonts/font = ExtResource("1_wun42")
theme_override_font_sizes/font_size = 9
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."
vertical_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_wun42")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = ExtResource("7_cl7we")
theme_override_styles/hover = ExtResource("8_ypdrj")
theme_override_styles/pressed = ExtResource("8_ypdrj")
text = ">"

[node name="targetArea" type="Area2D" parent="."]
visible = false
position = Vector2(107, -14)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="targetArea"]
shape = SubResource("RectangleShape2D_03qbg")

[node name="InfluencerPlayer" parent="." instance=ExtResource("3_s7a0h")]
position = Vector2(108, 68)

[node name="wanderlust" type="Sprite2D" parent="InfluencerPlayer"]
position = Vector2(-33, 2)
texture = ExtResource("4_qicc1")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="targetArea" to="." method="_on_target_area_area_entered"]
